--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/a4e4501f2f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
-    <title>Document</title>
+    <title>School App</title>
 </head>
 <body>
     <nav class="close">
